; ModuleID = '/home/carl/AnghaBench/linux/sound/soc/extr_soc-dapm.c_is_connected_output_ep.c'
source_filename = "/home/carl/AnghaBench/linux/sound/soc/extr_soc-dapm.c_is_connected_output_ep.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_soc_dapm_widget = type { i32 }
%struct.list_head = type { i32 }

@SND_SOC_DAPM_DIR_OUT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_soc_dapm_widget*, %struct.list_head*, {}*)* @is_connected_output_ep to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_connected_output_ep(%struct.snd_soc_dapm_widget* %0, %struct.list_head* %1, {}* %2) #0 {
  %4 = alloca %struct.snd_soc_dapm_widget*, align 8
  %5 = alloca %struct.list_head*, align 8
  %6 = alloca {}*, align 8
  store %struct.snd_soc_dapm_widget* %0, %struct.snd_soc_dapm_widget** %4, align 8
  store %struct.list_head* %1, %struct.list_head** %5, align 8
  store {}* %2, {}** %6, align 8
  %7 = load %struct.snd_soc_dapm_widget*, %struct.snd_soc_dapm_widget** %4, align 8
  %8 = load %struct.list_head*, %struct.list_head** %5, align 8
  %9 = load i32, i32* @SND_SOC_DAPM_DIR_OUT, align 4
  %10 = load {}*, {}** %6, align 8
  %11 = bitcast {}* %10 to i32 (%struct.snd_soc_dapm_widget*, i32)*
  %12 = call i32 @is_connected_ep(%struct.snd_soc_dapm_widget* %7, %struct.list_head* %8, i32 %9, i32 (%struct.snd_soc_dapm_widget*, %struct.list_head*, i32 (%struct.snd_soc_dapm_widget*, i32)*)* bitcast (i32 (%struct.snd_soc_dapm_widget*, %struct.list_head*, {}*)* @is_connected_output_ep to i32 (%struct.snd_soc_dapm_widget*, %struct.list_head*, i32 (%struct.snd_soc_dapm_widget*, i32)*)*), i32 (%struct.snd_soc_dapm_widget*, i32)* %11)
  ret i32 %12
}

declare dso_local i32 @is_connected_ep(%struct.snd_soc_dapm_widget*, %struct.list_head*, i32, i32 (%struct.snd_soc_dapm_widget*, %struct.list_head*, i32 (%struct.snd_soc_dapm_widget*, i32)*)*, i32 (%struct.snd_soc_dapm_widget*, i32)*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
